login page mobile responsive

--- a/src/components/login.css
+++ b/src/components/login.css
@@ -66,3 +66,8 @@
     text-decoration: none;
   }
   
+  @media screen and (max-width: 900px){
+    .login-container{
+      width: 95%;
+    }
+  }
