forgot and reset added

--- a/src/components/note.css
+++ b/src/components/note.css
@@ -10,7 +10,7 @@
     width: fit-content;
     padding: 0 1rem 0 1rem;
     margin: 1rem;
-    background-color: #f7f5a9;
+    background-color: #FFFFCC	
 }
 .navbar-login{
     font-size: 1.2rem;
