--- a/src/components/note.css
+++ b/src/components/note.css
@@ -57,7 +57,8 @@
     margin: auto 1rem auto auto;
     border-radius: 1rem;
     font-weight: 700;
-    padding: 8px;
+    height: 2.6rem;
+    padding: 5px;
 }
 .navbar-dashboard:hover{
     background-color: #2979FF;
