--- a/src/components/note.css
+++ b/src/components/note.css
@@ -4,13 +4,22 @@
     font-size: 1.8rem;
     font-weight: 700;
 }
+.note-parent-component{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .note-component{
     max-width: 60%; 
     min-width: 40%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: fit-content;
     padding: 0 1rem 0 1rem;
     margin: 1rem;
-    /* background-color: #FFFFCC	 */
     background-color: #fffdaf;
 }
 .navbar-login{
